[project]
name = "rag-session-9"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain[huggingface]",
    'beautifulsoup4',
    "langchain-community",
    'langchain-openai',
    'langchain-core',
    "langchain-text-splitters",
    "asttokens>=3.0.1",
    "comm>=0.2.3",
    "pypdf>=6.9.0",
    "bs4>=0.0.2",
    "sentence-transformers>=5.3.0",
    "python-dotenv>=1.2.2",
]
